# ai_chat

./: Cargo.toml  LICENSE.txt  README.md
.github/workflows/: build_and_check.yaml
src/: config.rs  ddg.rs  llm.rs  main.rs
