[package]
name = "ai_chat"
version = "0.1.0"
edition = "2021"

[dependencies]
fallible-iterator = { version = "0.3.0", features = ["std"] }
serde = { version = "1.0.214", features = ["derive"] }
serde_json = "1.0.132"
thiserror = "1.0.63"
toml = "0.8.19"
ureq = { version = "2.10.1", features = ["json"] }
